--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="hero">
         <img src="me.jpg" id="main-logo">
     <div class="shadow">
-        <h1>I Am <span class="underline">Batman</span></h1>
-        <button class="btn" onclick="window.location.href='tel:07883435800';">Call the BatMan</button>
+        <h1>I Am <span class="underline">BatAmaan</span></h1>
+        <button class="btn" onclick="window.location.href='tel:07883435800';">Call the BatAmaaan</button>
     </div>
     </div>
 
